<resources>
    <string name="app_name">MeetLoaf</string>
    <string name="nav_home">Home</string>
    <string name="nav_add" translatable="false">Add</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_create" translatable="false">Create Meeting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="title">Title</string>
    <string name="attendees">Attendees</string>
    <string name="notes">Notes</string>
    <string name="my_meetings">My Meetings</string>
    <string name="meeting_history">Meeting History</string>
    <string name="title_activity_maps">Map</string>
    <string name="clear">CLEAR</string>
    <string name="submit">SUBMIT</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="confirm">Confirm</string>
    <string name="select_time">Select Time</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="text_colour">Text Colour</string>
    <string name="text_size">Text Size</string>
</resources>
